Adjust layout bugs.

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -424,11 +424,11 @@ h4 {
 }
 
 .grid-item {
-    min-height: 325px;
+    min-height: 350px;
     position: relative;
     -webkit-transition: all 200ms ease-in-out;
     -moz-transition: all 200ms ease-in-out;
-    -o-transition: all 200ms ease-in-out;75px
+    -o-transition: all 200ms ease-in-out;
     transition: all 200ms ease-in-out;
 }
 
